.provarCaches/00D5f000005vwGkEAI/objects/rstk__mrpbom__c.object
<CustomObject>
    <description>mrpbom__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_bomtype__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BOMTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>compitem</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipName>MRPBOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divmrpboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DTEREQD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_enguom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>enguom_ui</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipName>mrpboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_fixqtyflag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FIXQTYFLAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_index__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>INDEX</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrpbom_item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipName>MRPBOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LINE</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_llc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LLC</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_ltoffset__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LTOFFSET</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_mrpovrind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRPOVRIND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_phantomovr_pl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrpbom_phantomovr_pl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use as Standard Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_procno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>procno_ui</label>
        <referenceTo>rstk__rtproc__c</referenceTo>
        <relationshipName>MRPBOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_procnono__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrpbom_procnono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYPER</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_refdes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrpbom_refdes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_rev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>rev_ui</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipName>MRPBOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_scrappcnt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SCRAPPCNT</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_setupqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SETUPQTY</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_type_pl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrpbom_type_pl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phantom</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_wctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>wctr_ui</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipName>mrpboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpbom_wctrno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mrpbom_wctrno</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MRP BOM</label>
    <nameField>
        <label>MRPBOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRPBOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>